src/objects/GLBL_Form_Template__c.object
<CustomObject>
    <description>Stored template information related to each form; Contains details like whether its launch pad assessment or not, whether a form is active or not</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether the form template is to be used or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Stores description of the form</description>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ref__c</fullName>
        <description>Stored Form Reference Number</description>
        <displayFormat>FT-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Stores the type of form that are displayed to the frontend user</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Launchpad Assessment</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Form Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Ref__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GLBL_LaunchPad_Assessment_view</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Ref__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Launchpad Assessment</value>
        </filters>
        <label>LaunchPad Assessment view</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>